--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "watch": "nodemon server.js",
     "seed": "node seeds/index.js"
   },
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/MXCAZ/Tech-Blog#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.3.0-alpha1",
     "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "express": "^4.16.3",
